--- a/src/components/organisms/NavbarTop.css
+++ b/src/components/organisms/NavbarTop.css
@@ -1,4 +1,7 @@
 #nav-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 background: rgb(111,104,176);
 background: linear-gradient(146deg, rgba(111,104,176,1) 0%, rgba(252,254,255,1) 47%);
 box-shadow: 0 2px 4px #6d44a21c;
@@ -8,6 +11,7 @@ box-shadow: 0 2px 4px #6d44a21c;
   text-align: center;
   font-weight: 600;
   letter-spacing: 1px;
+  height: 40px;
 }
 
 #nav-bar {
@@ -33,9 +37,13 @@ box-shadow: 0 2px 4px #6d44a21c;
 #navbutton:hover {
   border: 1px solid rgba(10, 10, 10, 0.1);
   box-shadow: 0 2px 4px #6d44a21c;
-  color: rgb(64, 9, 139);
-  font-weight: 600;
+ 
 }
+
+#navbutton.activeItem {
+  color:  blueviolet;
+}
+
 
 .navbar-nav {
   display: flex;
